V1.0 -
	> Named "Minecraft 2D"
    > Created Build Mechanism
    > Created Camera 
    > Created 2D Player

V1.1 -
    > Renamed to "Vox2D"
	> Put up project in GitHub Repo: https://github.com/Voxi0/Vox2D
    > Added zlib License
    > Added Block Textures (3 Textures (Grass Block, Dirt Block, Dark Oak Log))
    > Changed Block Highlight Color
    > Added Camera Zoom In and Out 
    > Recreated Player Better than Before
    > Updated README.txt 
    > Removed Numpad Support for Building. Can No Longer Create Blocks with Number Keys.

V1.2 -
    > Created Simple Inventory System to Choose Textures with Numbers
    > Added Cobblestone Texture